--- a/server.cfg
+++ b/server.cfg
@@ -5,7 +5,7 @@ maxplayers 10
 port 7777
 hostname Texture Studio v1.0
 gamemode0 bare 1
-filterscripts tstudio fsdebug
+filterscripts tstudio fsdebug test
 plugins sscanf streamer filemanager crashdetect mapandreas
 announce 0
 query 1
