--- a/server.cfg
+++ b/server.cfg
@@ -6,7 +6,7 @@ port 7777
 hostname Texture Studio v1.0
 gamemode0 bare 1
 filterscripts tstudio fsdebug
-plugins sscanf streamer filemanager crashdetect mapandreas
+plugins sscanf streamer filemanager crashdetect
 announce 0
 query 1
 chatlogging 0
