--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ ehthumbs.db
 # Folder config file
 Desktop.ini
 server_log.txt
+crashinfo.txt
+*.exe
 
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
@@ -27,7 +29,8 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must ends with two \r.
-Icon
+Icon
+
 
 # Thumbnails
 ._*
