--- a/server.cfg
+++ b/server.cfg
@@ -3,10 +3,10 @@ lanmode 0
 rcon_password nopass
 maxplayers 10
 port 7777
-hostname Texture Studio v1.0
+hostname Texture Studio
 gamemode0 bare 1
 filterscripts tstudio fsdebug
-plugins sscanf streamer filemanager crashdetect
+plugins crashdetect sscanf streamer filemanager
 announce 0
 query 1
 chatlogging 0
