--- a/server.cfg
+++ b/server.cfg
@@ -3,7 +3,7 @@ lanmode 0
 rcon_password nopass
 maxplayers 10
 port 7777
-hostname Texture Studio 1.7e
+hostname Texture Studio 1.8
 gamemode0 bare 1
 filterscripts tstudio fsdebug
 plugins crashdetect sscanf streamer filemanager
