--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,10 +20,7 @@
             "label": "build debug",
             "type": "shell",
             "command": "\"C:\\Program Files\\sampctl\\sampctl\" package build debug",
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
+            "group": "build",
             "isBackground": false,
             "presentation": {
                 "reveal": "silent",
